# CoreCraftSimulator

./: .gitignore  README.md  pyproject.toml
Research/: stream_b_simulation_quality.md
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx
dashboard/src/components/: ChatThread.tsx  KpiCard.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/src/db/: context.tsx  loader.tsx  queries.ts  seed.ts
dashboard/src/pages/: Agents.tsx  Coherence.tsx  CustomerDetail.tsx  Customers.tsx  Home.tsx  TicketDetail.tsx  Tickets.tsx  Timeline.tsx
docker/: Dockerfile.customer  Dockerfile.employee
notebooks/: train_grpo.ipynb
openenv_pkg/scripts/: plot_arch.py  plot_task_miner.py
output/sim_20260307_230546/: world.db
src/enterprise_sim/agents/customer_001/: persona.json  support_contact.txt
src/enterprise_sim/agents/customer_001/life_context/: about_me.md  current_issues.md  recent_purchases.md
src/enterprise_sim/agents/customer_003/: persona.json
src/enterprise_sim/agents/customer_003/extensions/: customer_tools.ts
src/enterprise_sim/agents/customer_010/: persona.json
src/enterprise_sim/agents/employee_manager_01/: role.json
src/enterprise_sim/agents/employee_support_01/: role.json
src/enterprise_sim/orchestrator/: agent_manager.py  openenv_server.py  sim_config.py  simulation_engine.py  tick_processor.py  world_db.py
src/enterprise_sim/shared/: world.db
src/enterprise_sim/shared/work_context/: escalation_policy.md  handbook.md  product_catalog.md
src/enterprise_sim/tools/: cli.py  employee_tools.py
(+8 files in other folders)
