[project]
name = "enterprise-sim"
version = "0.1.0"
description = "Generative RL environment for training LLMs on enterprise customer support"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
esim = "enterprise_sim.tools.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_sim"]
